# f1_information

./: .gitignore  README.md  a.py  app.py  pyproject.toml  requirements.txt
notebooks/: 01_analysis_workflow.ipynb  01_data_visualization_check.ipynb
notebooks/.ipynb_checkpoints/: 01_analysis_workflow-checkpoint.ipynb  01_data_visualization_check-checkpoint.ipynb
src/: analysis.py  data_fetcher.py  main.py
